test/2/type/poly-unconstrained.err
type error: test/2/type/poly-unconstrained.ploy:6:7-7: polymorph alias 'x': cannot resolve constraint.
  actual type:   Poly<Int Str>;
  expected type: *0.
    y = x
        ~
